:zap: spring-boot properties format